--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ llama-index-embeddings-huggingface
 sentence-transformers
 pinecone-client
 gunicorn
+llama-index==0.13.0
+llama-index-vector-stores-faiss==0.1.3
+faiss-cpu==1.7.4
 
