--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 flask
-llama-index-core==0.13.0
-llama-index-embeddings-huggingface 
+llama-index
 sentence-transformers
 pinecone-client
 gunicorn
-llama-index==0.13.0
-llama-index-vector-stores-faiss==0.1.3
-faiss-cpu==1.7.4
+llama-index-core==0.13.0
+llama-index-vector-stores-faiss
+llama-index-embeddings-huggingface
+transformers
+torch
+faiss-cpu
+python-dotenv
 
